<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearCoin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"

    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/my_card_view"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp">

            <ImageView

                android:id="@+id/icon_tv"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />


        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curr_name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="|"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/curr_symbol"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Price : " />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/usd_price" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change in 1 Hr (%) : " />

            <TextView
                android:id="@+id/change_1hr_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/percent_change_1h" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change in 24 Hrs (%) : " />

            <TextView
                android:id="@+id/change_24hr_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/percent_change_24h" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="90dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change in 7 Days(%) : " />

            <TextView
                android:id="@+id/change_7d_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/percent_change_7d" />

        </LinearLayout>


        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="50dp"/>

    </android.support.v7.widget.CardView>

</LinearLayout>